# SketchConnectivity

./: .clang-format  .gitignore  CMakeLists.txt  README.md
python/core/: CMakeLists.txt  blender.cpp  cast.h  clipping.cpp  closest.cpp  consolidation.cpp  drawing.cpp  drawing.h  fairing.cpp  fitting.cpp  intersect.cpp  io.cpp  junction.cpp  junction_features.cpp  main.cpp  mapping.cpp  region_cues.cpp  render.cpp  sketching.cpp  stroke_graph.cpp
python/sketching/: __init__.py  junc_classify.py  junction.py  plot.py  util.py
python/sketching/resources/: classify_junction_models-current.pickle
src/sketching/: bridge.cpp  bridge.h  classifier.h  clipping.cpp  clipping.h  deform.cpp  diff.cpp  diff.h  endpoint.h  fairing.cpp  fairing.h  forest.cpp  graph_color.cpp  graph_color.h  incremental.cpp  intersect.cpp  intersect.h  io.h  is_face_collapsible.cpp  is_face_collapsible.h  render.cpp  render.h  sketching.cpp  sketching.h  stb_sprintf.cpp
src/sketching/consolidation/: consolidate.cpp  consolidate.h  snap_endpoints.cpp  snap_endpoints.h  strokewise_measure.cpp  strokewise_measure.h
src/sketching/features/: junction_features_impl.cpp  junction_features_impl.h
src/sketching/global_solve/: incremental_decomposition.cpp  incremental_decomposition.h  incremental_obj.cpp  incremental_obj.h  incremental_param.h  incremental_region.cpp  incremental_region.h  incremental_region_util.cpp  incremental_region_util.h  incremental_solve.cpp  incremental_solve.h  incremental_util.cpp  incremental_util.h
src/sketching/io/: error.h  file_guard.h  json.cpp  json.h  pdf.cpp  pdf.h  svg.cpp  svg.h  vac.cpp  vac.h
tools/: .gitignore  config.py  forest_to_c.py  plot_graph.py  preprocess.py  run_batch.py  run_pipeline.py  train_junction_classifier.py  vec_viewer.py
tools/converters/: vec2svg.py
